<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, HymnsActivity!</string>
    <string name="app_name">Hymns</string>
    <string name="searchString">Search</string>
    <string name="noText">No:</string>
    <string name="enterHymnNo">Enter Hymn No.</string>
    <string name="go">Go</string>
    <string name="playHymn">Play Hymn</string>
    <string name="pauseHymn">Pause Hymn</string>
    <string name="faveHymn">Fave Hymn</string>
    <string name="unfaveHymn">Unfave Hymn</string>
    <string name="dayMode">Day Mode</string>
    <string name="hymnsForAndroid">Hymns for Android</string>
    <string name="version">v3.1</string>
    <string name="reportAbug">Send feedback to: lemuelinchrist@gmail.com</string>
    <string name="about">About</string>
    <string name="branch">piano</string>

    <!-- Navigation Drawer -->

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="english">English</string>
    <string name="choose_font_size">Choose Font Size</string>
    <string name="choose_hymn_first">Please choose a hymn first before clicking this button.</string>
    <string name="no_hymn_selected">No Hymn Selected</string>
    <string name="ok">Ok</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nightMode">Night Mode</string>
    <string name="settings">Manage Faves</string>
    <string name="search_youtube">Search YouTube</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="settings_category">Settings</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="headerFiller">\nE1\nBlessing of the Trinity - His Plan\nMeter:8.5.8.3\nTime:4/4 - Ab Major\nRelated: CB1, K1, J1, G1, T1, C1, S1\n</string>
    <string name="lyricFiller">
        ##1##\nGlory be to God the Father,\nAnd to Christ the Son,\nGlory to the Holy Spirit-\nEver One.\n\n##2##\nAs we view the vast creation,\nPlanned with wondrous skill,\nSo our hearts would move to worship,\nAnd be still.\n\n##3##\nBut, our God, how great Thy yearning\nTo have sons who love\nIn the Son e\'en now to praise Thee,\nLove to prove!\n\n##4##\n\'Twas Thy thought in revelation,\nTo present to men\nSecrets of Thine own affections,\nTheirs to win.\n\n##5##\nSo in Christ, through His redemption\n(Vanquished evil powers!)\nThou hast brought, in new creation,\nWorshippers!\n\n##6##\nGlory be to God the Father,\nAnd to Christ the Son,\nGlory to the Holy Spirit\nEver One.\n\n\n</string>
    <string name="composerFiller">Author: J. F. Garland\\nComposer: Ira David Sankey (1840-1908)</string>

</resources>