<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_category">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="Medium"
            app:entries="@array/font_size"
            app:entryValues="@array/font_size_values"
            app:key="sizeFont"
            app:title="@string/choose_font_size"
            app:useSimpleSummaryProvider="true"
            app:icon="@drawable/fontsize_black"
            />
        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

    </PreferenceCategory>
</PreferenceScreen>
