<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"

        android:id="@+id/jellybeanContentScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <LinearLayout
            android:id="@+id/lyric_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#FFFFFF"
    >
        <!--This will solve the lyric autoscrolling problem but it blocks the lyrics from being selectable-->
        <!--android:descendantFocusability="blocksDescendants"-->

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent" android:layout_height="wrap_content"
                app:cardBackgroundColor="#FFFFFF" app:cardCornerRadius="3dp" app:cardElevation="4dp"
                android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"

        >
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/lyricHeader"
                    android:minHeight="30dp"
                    android:text="@string/headerFiller"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:textColor="#4e4e4e"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent" android:layout_height="wrap_content"
                app:cardBackgroundColor="#FFFFFF" app:cardCornerRadius="3dp" app:cardElevation="4dp"
                android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
        >
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
            >
                <TextView
                        android:id="@+id/jellybeanLyrics"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        android:background="#FFFFFF"
                        android:layout_marginTop="10dp"
                        android:textColor="#4e4e4e"
                        android:text="@string/lyricFiller"
                        android:textIsSelectable="true"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
                android:layout_width="match_parent" android:layout_height="wrap_content"
                app:cardBackgroundColor="#FFFFFF" app:cardCornerRadius="3dp" app:cardElevation="4dp"
                android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
        >
            <TextView
                    android:id="@+id/composer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"
                    android:background="#FFFFFF"
                    android:layout_marginTop="10dp"
                    android:textColor="#4e4e4e"
                    android:text="@string/composerFiller"
                    android:textIsSelectable="true"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>

