<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"

        android:id="@+id/jellybeanContentScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/dayMode"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <LinearLayout
            android:id="@+id/lyric_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            style="@style/dayMode"
    >
        <!--This will solve the lyric autoscrolling problem but it blocks the lyrics from being selectable-->
        <!--android:descendantFocusability="blocksDescendants"-->

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent" android:layout_height="wrap_content"
                style="@style/dayMode" app:cardCornerRadius="3dp" app:cardElevation="4dp"
                android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
        >
            <androidx.appcompat.widget.LinearLayoutCompat android:id="@+id/buttonContainer"
                                                          android:layout_width="match_parent"
                                                          android:layout_height="match_parent"
                                                          android:orientation="vertical">
                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/lyricHeader"
                        android:minHeight="30dp"
                        android:text="@string/headerFiller"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        style="@style/dayMode"/>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:layout_gravity="center"
                >


                    <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/faveButton"
                            android:src="@drawable/ic_favorite_border_white_48dp"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_gravity="left"
                            android:layout_weight="1"/>
                    <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/playButton"
                            android:src="@drawable/ic_play_arrow_white_48dp"
                            android:layout_gravity="left"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_weight="1"/>
                    <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/sheetMusicButton"
                            android:src="@drawable/ic_queue_music_white_48dp"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_gravity="left"
                            android:layout_weight="1"/>
                    <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/copyButton"
                            android:src="@drawable/ic_content_copy_white_48dp"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_weight="1"
                            android:layout_gravity="left"/>


                </LinearLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView

                android:layout_width="match_parent" android:layout_height="wrap_content"
                style="@style/dayMode" app:cardCornerRadius="3dp" app:cardElevation="4dp"
                android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
        >
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:id="@+id/stanzaView"
            >
                <TextView
                        android:id="@+id/jellybeanLyrics"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="10dp"
                        style="@style/dayMode"
                        android:layout_marginTop="10dp"
                        android:text="@string/lyricFiller"
                        android:textIsSelectable="true"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
                android:layout_width="match_parent" android:layout_height="wrap_content"
                style="@style/dayMode" app:cardCornerRadius="3dp" app:cardElevation="4dp"
                android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
        >
            <TextView
                    android:id="@+id/composer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"
                    style="@style/dayMode"
                    android:layout_marginTop="10dp"
                    android:text="@string/composerFiller"
                    android:textIsSelectable="true"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>

